--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ remote_theme: daattali/beautiful-jekyll@5.0.0
 
 navbar-links:
   Blog: "https://blog.srazavi.com"
+  Poems: "https://poems.prazavi.com"
 
 # --- Logo --- #
 
