Fix profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Seyed P. Razavi-Nematollahi
 description: Philosophy of Mind & AI | University of Birmingham
 
 baseurl:  #name of GitHub repository
-url: "https://srazavi.com" #custom url to be used instead of GitHub repository
+url: "https://www.srazavi.com" #custom url to be used instead of GitHub repository
 email: #
 
 
