--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### your site title here
 
-title: Seyed P. Razavi-Nematollahi
-description: Philosophy of Mind & AI | University of Birmingham
+title: Seyed P. Razavi
+description: Writer, Philosopher and Technologist
 
 baseurl:  #name of GitHub repository
 url: "https://www.srazavi.com" #custom url to be used instead of GitHub repository
